--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.3",
     "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
